# BlankProject_RShiny-PyStarlette

./: README.md  docker-build.sh  docker-compose.yml
backend/: .gitignore  Dockerfile
backend/src/: requirements.txt  setup.cfg  setup.py
backend/src/skeleton/api/: __init__.py
backend/src/skeleton/cmd/: __init__.py  api.py  status.py
frontend/: .gitignore  Dockerfile
frontend/src/: DESCRIPTION  requirements.R
frontend/src/R/: app.R
frontend/src/inst/shiny/: global.R  server.R  ui.R
