[metadata]
name = skeleton
version = attr: skeleton.__version__
description = A simple Starlette webapp used by a R Shiny webapp
long_description = file: README.md, CHANGELOG.rst, LICENSE.txt
maintainer = "Martin MASSON"
maintainer_email = "martin.masson.pro@protonmail.com"
keywords = Python, R
license = Apache-2.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages=find:
install_requires =
  numpy
  pandas

[options.packages.find]
where=.

[options.package_data]
* = *.md, *.yml, docs/*

[options.extras_require]
test = pytest; pytest-cov

[flake8]
max-line-length=99
